code/rolling-upgrade-demo/k8s/0-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-app-deployment
spec:
  selector:
    matchLabels:
      app: rolling-app
  replicas: 3
  template:
    metadata:
      labels:
        app: rolling-app
    spec:
      containers:
      - name: rolling-app
        image: gitlab:5000/k8s-rolling-app:1.0.12-SNAPSHOT
        ports:
        - containerPort: 8080
          name: server
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 10
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
