code/rolling-upgrade-demo/k8s/2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rolling-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
  - host: rolling-app.demo.tdlabs.k8s
    http:
      paths:
      - backend:
          serviceName: rolling-app-service
          servicePort: 8080
        path: /
